--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,8 @@
 }
 
 body {
+  scroll-behavior: smooth;
+  min-height: 100vh;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,6 +26,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
 }
 
 @layer utilities {
